<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_schools"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_schools" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_baseline_design_services_24"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chats" />
    </group>
</menu>